--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
 	height: 100%;
 	background: url("https://i.imgur.com/wt4NRqA.jpg");
 	font-family: 'Work Sans', sans-serif !important;
+	font-size: 100%;
 	color: white;
 	margin: 0;
 	padding-top: 0;
@@ -58,7 +59,7 @@ body {
 	box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
 	background-color: rgba(50, 50, 50, 0.9);
 }
-#closebtn {
+#close {
 	height: 100%;
 	width: 0;
 	position: fixed;
@@ -69,7 +70,38 @@ body {
 	z-index: 1;
 	background-color: rgba(50, 50, 50, 0.1);
 }
-.menuitem {
-	width: 9000%;
+input[type=text] {
+	background-color: rgba(50, 50, 50, 0.4);
+	border: none;
+	border-bottom: 1px solid #000000;
+	font-size: 120%;
 }
-
+.confirmbutton {
+	height: 25px;
+	width: 25px;
+	background-color: rgba(118, 255, 3, 0.7);
+	border: none;
+	color: white;
+}
+.removebutton {
+	height: 25px;
+	width: 25px;
+	background-color: rgba(200, 0, 0, 0.7);
+	border: none;
+	color: white;
+}
+.closebutton {
+	height: 50px;
+	width: 50px;
+	background-color: rgba(200, 0, 0, 0.7);
+	border: none;
+	color: white;
+	float: right;
+	margin-top: 10px;
+	margin-right: 5px;
+	-webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
+	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
+	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);}
+.round {
+	border-radius: 100%;
+}
