--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,6 @@ body {
 	width: 100%;
 	height: 75px;
 	background-color: rgba(50, 50, 50, 0.6);
-	padding: 0;
-	margin: 0;
 	-webkit-box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
 	-moz-box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
 	box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
@@ -47,8 +45,8 @@ body {
 }
 #settings {
 	height: 100%;
-	width: 0;
-	position: fixed;
+	width: 0px;
+	position: absolute;
 	top: 0;
 	left: 0;
 	overflow-x: hidden;
@@ -104,4 +102,7 @@ input[type=text] {
 	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);}
 .round {
 	border-radius: 100%;
+}
+.settingsinput {
+	width: 200px;
 }
