--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,8 @@ input[type=text] {
 	background-color: rgba(50, 50, 50, 0.4);
 	border: none;
 	border-bottom: 1px solid #000000;
-	font-size: 120%;
+	font-size: 110%;
+	font-family: 'Work Sans', sans-serif;
 }
 .confirmbutton {
 	height: 25px;
@@ -99,10 +100,28 @@ input[type=text] {
 	margin-right: 5px;
 	-webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
 	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
-	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);}
+	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
+}
+.todobutton {
+	height: 50px;
+	width: 50px;
+	background-color: rgba(200, 200, 200, 0.3);
+	border: none;
+	color: white;
+	float: right;
+	position: fixed;
+	margin-bottom: 25px;
+	margin-right: 25px;
+	-webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
+	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
+	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
+	bottom: 0;
+	right: 0;
+}
 .round {
 	border-radius: 100%;
 }
 .settingsinput {
 	width: 200px;
+	color: white;
 }
