--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,20 @@ body {
 	.header {
 		display: none;
 	}
+	#clock {
+		font-size: 600%;
+		text-align: center;
+	}
+
 }
 @media only screen and (min-width: 450px) {
 	.header {
-	margin-left: 3em;
-	margin-top: 1em;
+		margin-left: 3em;
+		margin-top: 1em;
+}
+	#clock {
+		font-size: 800%;
+		text-align: center;
 }
 }
 .aot {
@@ -25,11 +34,10 @@ body {
 	z-index: 999;
 	cursor: pointer;
 }
-.menubar {
+#menubar {
 	position: fixed;
 	width: 100%;
 	height: 75px;
-	background-color: rgba(50, 50, 50, 0.6);
 	-webkit-box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
 	-moz-box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
 	box-shadow: 0px 4px 5px 0px rgba(100,100,100,0.4);
@@ -39,10 +47,6 @@ body {
 	position: fixed;
 	width: 100%
 }
-#clock {
-	font-size: 800%;
-	text-align: center;
-}
 #settings {
 	height: 100%;
 	width: 0px;
@@ -50,7 +54,7 @@ body {
 	top: 0;
 	left: 0;
 	overflow-x: hidden;
-	transition: 0.4s;
+	transition: 0.2s;
 	z-index: 2;
 	-webkit-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
 	-moz-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
@@ -64,7 +68,7 @@ body {
 	top: 0;
 	left: 0;
 	overflow-x: hidden;
-	transition: 0.2s;
+	transition: 0.1s;
 	z-index: 1;
 	background-color: rgba(50, 50, 50, 0.1);
 }
@@ -124,4 +128,11 @@ input[type=text] {
 .settingsinput {
 	width: 200px;
 	color: white;
+}
+#cpicker {
+	border-width: 0px;
+	border: none !important;
+	background-color: transparent;
+	height: 20px;
+	width: 100px;
 }
