--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,22 @@ body {
 	box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
 	background-color: rgba(50, 50, 50, 0.9);
 }
+#todomenu {
+	height: 0px;
+	width: auto;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	overflow-y: hidden;
+	transition: 0.2s;
+	z-index: 2;
+	-webkit-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
+	-moz-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
+	box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
+	background-color: rgba(50, 50, 50, 0.9);
+	margin: 5px;
+	padding: 0px 5px 0px 5px;
+}
 #close {
 	height: 100%;
 	width: 0;
@@ -106,7 +122,7 @@ input[type=text] {
 	-moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
 	box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.4);
 }
-.todobutton {
+#todobutton {
 	height: 50px;
 	width: 50px;
 	background-color: rgba(200, 200, 200, 0.3);
@@ -135,4 +151,13 @@ input[type=text] {
 	background-color: transparent;
 	height: 20px;
 	width: 100px;
+}
+#closetodobutton {
+	margin-right: 5px;
+	z-index: 3;
+	margin-bottom: 50px;
+	position: fixed;
+	right: 5px;
+	visibility: hidden;
+	background-color: rgba(200, 200, 200, 0.2);
 }
