--- a/styles.css
+++ b/styles.css
@@ -62,14 +62,14 @@ body {
 	background-color: rgba(50, 50, 50, 0.9);
 }
 #todomenu {
-	height: 0px;
+	max-height: 0px;
 	width: auto;
 	position: absolute;
 	bottom: 0;
 	right: 0;
 	overflow-y: hidden;
-	transition: 0.2s;
 	z-index: 2;
+	transition: 0.2s;
 	-webkit-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
 	-moz-box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
 	box-shadow: 7px 4px 5px 0px rgba(100,100,100,0.4);
