--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,9 @@ body {
 	background-color: rgba(50, 50, 50, 0.1);
 }
 input[type=text] {
-	background-color: rgba(50, 50, 50, 0.4);
+	background-color: rgba(0, 0, 0, 0.0);
 	border: none;
-	border-bottom: 1px solid #000000;
+	border-bottom: 1px solid #d3d3d3;
 	font-size: 110%;
 	font-family: 'Work Sans', sans-serif;
 }
@@ -99,6 +99,13 @@ input[type=text] {
 	height: 25px;
 	width: 25px;
 	background-color: rgba(118, 255, 3, 0.7);
+	border: none;
+	color: white;
+}
+.searchbutton {
+	height: 20px;
+	width: 20px;
+	background-color: rgba(50, 50, 50, 0.02);
 	border: none;
 	color: white;
 }
@@ -162,7 +169,7 @@ input[type=text] {
 	background-color: rgba(200, 200, 200, 0.2);
 }
 #add {
-	margin-right: 50px;
+  margin-right: 50px;
 }
 .notransition {
   -webkit-transition: none !important;
